# chatter_rs

./: Cargo.toml
src/: configuration.rs  main.rs  network.rs  terminal.rs
src/network/: message.rs  room.rs
