[package]
name = "one-on-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["cargo"] }
color-eyre = { version = "0.6.2", default-features = false }
features = "0.10.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
